# pipe_sim

./: CMakeLists.txt  README.md  package.xml
include/pipe_sim/: arc.h  create_map.h  line.h  mean_shift.h  particle_filter.h  pipe_map.h  pipe_segment.h  pipe_sim_drawer.h  point.h  robot.h  rssi_map.h  tag_rssi_map.h
launch/: Presentation.launch  TestMap.launch  pipe_sim.launch
maps/PipeMap/: PipeMap.yaml  PipeMap@.yaml  PipeMap~.yaml
maps/PipeMap/backup/: PipeMap~ (copy).yaml
maps/PipeMapNew/: PipeMapNew.yaml  PipeMapNew~.yaml
maps/Presentation/: Presentation.yaml  Presentation@.yaml  Presentation~.yaml
maps/TestMap/: TestMap.csv  TestMap.yaml  TestMap@.yaml
msg/: PipeDrawingInstructions.msg  PipeLine.msg  PipeLineSegment.msg  PipeRobot.msg  PipeRobots.msg  Point.msg  RFIDTag.msg
src/: arc.cpp  create_map.cpp  generate_rssi_map_node.cpp  line.cpp  mean_shift.cpp  particle_filter.cpp  pipe_map.cpp  pipe_map_node.cpp  pipe_segment.cpp  pipe_sim_drawer.cpp  point.cpp  robot.cpp  robot_node.cpp  rssi_map.cpp  tag_rssi_map.cpp
srv/: ParticleFilterService.srv  RequestMapDistance.srv  RequestMapImage.srv  RequestRFIDTags.srv  SetRobotVelocity.srv
